# sudoku_tool

./: .gitignore  README.md
sudoku-tool/: Cargo.toml  multiple_solution_results.csv  single_solution_results.csv  sudoku_stats.csv  sudoku_stats_25.csv
sudoku-tool/puzzles/: mepham_d.txt  murty_2_soln.txt  schultz_301.txt
sudoku-tool/puzzles/printable_sudoku_puzzles/25/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
sudoku-tool/puzzles/single_solution/: mepham_d_str.txt  shortz_301_str.txt
sudoku-tool/puzzles/test/: 01_sample.txt  isomorphism_test.txt
sudoku-tool/src/: bf_solver.rs  crook_solver.rs  lib.rs  main.rs  solver.rs  sudoku.rs
sudoku-tool/src/core/: mod.rs  sudoku.rs
sudoku-tool/src/core/solvers/: bf_solver.rs  crook_solver.rs  mod.rs
sudoku-tool/src/core/transformers/: mod.rs  reflections.rs  relabeling.rs  rotations.rs  stacks_bands.rs
sudoku-tool/tests/: bf_solver_tests.rs  reflections_tests.rs  relabeling_tests.rs  rotations_tests.rs  stacks_bands_tests.rs  sudoku_tests.rs
