[package]
name = "sudoku-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
array2d = "0.3.2"
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"]}
thiserror = "2.0.17"

[[bin]]
name = "generate_graph_isomorphisms"
path = "src/bin/generate_graph_isomorphisms.rs"

[[bin]]
name = "rand_ord_experiment"
path = "src/bin/rand_ord_experiment.rs"
